--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,32 @@
   display: flex;
   flex-direction: column;
 }
+
+.header {
+   font-size: 25px;
+   margin-bottom: 30px;
+   font-weight: bold;
+   text-decoration: underline;
+}
+
+.image {
+  cursor: pointer;
+}
+
+.title {
+  font-size: 16px;
+}
+
+.table {
+  border: 2px solid black;
+  width: 800px;
+  height: 200px;
+}
+  
+.th {
+  border: 2px solid black;
+}
+
+.td {
+  text-align: center;
+}
